# worldseed-lint

./: LICENSE  README.md  pyproject.toml  quickstart.md
.pytest_cache/v/cache/: lastfailed
cli/: __init__.py  main.py
docs/: interface.md  lint-rules.md  verdicts.md
engine/: __init__.py  degradation_graph.py  report.py  schema_check.py  semantic_context.py
examples/: invalid_world.json  valid_world.json
mapping/: __init__.py  axiom_mapping.py
rules/axioms/: __init__.py  s10_observer_stability.py  s11_observation_semantics.py  s12_sensing_boundary.py  s13_boundary_respect.py  s14_explicit_irreversibility.py  s15_no_implicit_reconstruction.py  s16_numerical_semantics.py  s17_no_implicit_casting.py  s18_claim_scope.py  s19_distinguishability.py  s1_world_identity.py  s2_state_independence.py  s3_explicit_state.py  s4_no_spontaneous_change.py  s5_action_completeness.py  s6_action_semantics.py  s7_action_determinism.py  s8_observer_non_intervention.py  s9_explicit_observer.py
rules/consistency/: __init__.py  provenance.py  uncertainty.py  units.py
rules/features/: __init__.py  actions.py  irreversibility.py  numerical_semantics.py  observers.py  sensing_boundary.py
rules/profiles/: __init__.py  l0_ontology.py  l1_causal.py  l2_sensing.py  l3_numerical.py
tests/: __init__.py  test_harness.py
tests/conformance/: __init__.py  invalid_worlds.py  valid_worlds.py
